[gd_scene load_steps=3 format=3 uid="uid://dfdn1skkwclx0"]

[ext_resource type="FontFile" uid="uid://dap64sbpa6nsy" path="res://resources/fonts/BitPotionExt.ttf" id="1"]
[ext_resource type="Script" path="res://scripts/loginscreen.gd" id="2"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 972.0
offset_bottom = 712.0

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.193
anchor_right = 0.5
anchor_bottom = 0.193
offset_left = -213.0
offset_top = -75.064
offset_right = 213.0
offset_bottom = 75.136
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 96
text = "TopDownShooter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Email" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.342
anchor_top = 0.431
anchor_right = 0.342
anchor_bottom = 0.431
offset_left = -23.8
offset_top = -13.696
offset_right = 24.2
offset_bottom = 14.304
text = "Email:"

[node name="EmailEnter" type="LineEdit" parent="Panel/Email"]
layout_mode = 1
anchors_preset = -1
anchor_left = 4.812
anchor_top = 0.482
anchor_right = 4.812
anchor_bottom = 0.482
offset_left = -170.976
offset_top = -17.496
offset_right = 171.024
offset_bottom = 17.504
grow_vertical = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="Password" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.556
anchor_right = 0.36
anchor_bottom = 0.556
offset_left = -43.128
offset_top = -13.888
offset_right = 42.872
offset_bottom = 14.16
text = "Password:"

[node name="PasswordEnter" type="LineEdit" parent="Panel/Password"]
layout_mode = 1
anchors_preset = -1
anchor_left = 2.89
anchor_top = 0.535
anchor_right = 2.89
anchor_bottom = 0.535
offset_left = -155.54
offset_top = -17.0057
offset_right = 155.46
offset_bottom = 16.9943
max_length = 24
secret = true
caret_blink = true
caret_blink_interval = 0.5

[node name="CreateAccount" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.869
anchor_right = 0.5
anchor_bottom = 0.869
offset_left = -141.5
offset_top = -13.112
offset_right = 141.5
offset_bottom = 12.888
grow_horizontal = 2
grow_vertical = 0
text = "Don't have an account?"

[node name="CreateAccountButton" type="LinkButton" parent="Panel/CreateAccount"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.82
anchor_top = 0.5
anchor_right = 0.82
anchor_bottom = 0.5
offset_left = -45.06
offset_top = -13.0
offset_right = 44.94
offset_bottom = 12.0
theme_override_colors/font_color = Color(0, 0.635294, 0.423529, 1)
text = "Create one"

[node name="ErrorMessage" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.521
anchor_top = 0.323
anchor_right = 0.521
anchor_bottom = 0.323
offset_left = -187.504
offset_top = -31.8
offset_right = 186.496
offset_bottom = 32.2
theme_override_fonts/font = ExtResource("1")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoginButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.724
anchor_right = 0.5
anchor_bottom = 0.724
offset_left = -101.5
offset_top = -19.1521
offset_right = 101.5
offset_bottom = 18.8479
grow_horizontal = 2
grow_vertical = 0
text = "Login"
